<resources>
    <string name="app_name">DS Driver</string>

    <string name="home">Booking</string>
    <string name="upcoming">Reporting</string>
    <string name="BOOKING">History</string>
    <string name="WALITI">Transaction</string>
    <string name="PROFILE">Profile</string>
    <string name="bookingDetails">Booking Details</string>
    <string name="BookingHistory">Booking History</string>
    <string name="title_activity_home_deshbord">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_Wallet">WalletFragment</string>
    <string name="title_upcomeingBooking">UpcomeingBooking</string>
    <string name="title_bookinghistory">Bookinghistory</string>

</resources>